--- a/EurekaServerProject/src/main/resources/application.properties
+++ b/EurekaServerProject/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.application.name=EurekaServerProject
 server.port=8761
-#eureka.client.registerWithEureka=false
-eureka.client.fetchRegistry=false
 
+
+eureka.client.fetchRegistry=false
 eureka.client.registerWithEureka= false
 eureka.client.serviceUrl.defaultZone= ${EUREKA_URI:http://localhost:8761/eureka}
+eureka.server.renewal-percent-threshold=0.85
+eureka.server.eviction-interval-timer-in-ms=60000
+eureka.server.enable-self-preservation=true
